<resources>
    <string name="app_name">Versami</string>
    <string name="hint_name">Nome</string>
    <string name="menu_home">Início</string>
    <string name="menu_search">Explorar</string>
    <string name="menu_add">Publicar</string>
    <string name="menu_notification">Notificações</string>
    <string name="menu_profile">Perfil</string>
    <string name="menu_fragment_exit">Sair do Perfil</string>
    <string name="menu_fragment_edit">Editar Perfil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="aviso_erro">Sentimos muito :(</string>
    <string name="mensagem_erro">Ocorreu um problema ao tentar se conectar. Verifique sua internet e tente novamente.</string>
    <string name="mensagem_semposts">Ainda não há publicações disponíveis.</string>
    <string name="mensagem_semfav">Ainda não há livros favoritos</string>
    <string name="botao_seguir">Seguir</string>
    <string name="botao_seguindo">Seguindo</string>
    <string name="lorem">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint provident aliquid quas quasi quisquam voluptas, pariatur culpa! Sequi accusamus libero animi error autem eveniet porro, eos quam voluptates unde eum!</string>
    <string name="sobrenos2">Versão Mobile Desenvolvida por:\nYgor Gabriel e Thamiris Fernandes\nDesign por:\nMatheus Canesso</string>
    <string-array name="spinner_teste">
        <item>Selecione uma pergunta...</item>
        <item>Qual o seu livro favorito?</item>
        <item>Qual sua cidade natal?</item>
    </string-array>
</resources>