<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_home"/>
    <item
        android:id="@+id/menu_search"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:title="@string/menu_search"/>
    <item
        android:id="@+id/menu_add"
        android:enabled="true"
        android:icon="@drawable/ic_add"
        android:title="@string/menu_add"/>
    <item
        android:id="@+id/menu_notification"
        android:enabled="true"
        android:icon="@drawable/ic_notifications"
        android:title="@string/menu_notification"/>
    <item
        android:id="@+id/menu_profile"
        android:enabled="true"
        android:icon="@drawable/ic_account_circle"
        android:title="@string/menu_profile"/>
</menu>